# Blog

./: .env  .pre-commit-config.yaml  Dockerfile  PROJECT_STRUCTURE.md  README.adoc  README.md  compose.dev.yaml  compose.override.yaml  compose.prod.yaml  compose.production.yaml  compose.yaml  docker-compose.yml  project_creation_guide.md  project_description.md  project_pages.md  project_structure.md  project_tasks.md  project_tasks_list_deepsearch.md  startup.sh
.github/: dependabot.yaml
backend/: .bash_history  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  composer.json  phpstan.neon  pyproject.toml
backend/app/: database.py  main.py
backend/app/Models/: Category.php  Comment.php  Post.php  Tag.php  User.php
backend/app/alembic/: env.py
backend/app/alembic/versions/: e0b011a78f28_init_database.py
backend/app/api/dependencies/: admin.py
backend/app/api/endpoints/: categories.py  comments.py
backend/app/core/: api_key_middleware.py  config.py  security.py
backend/app/crud/: __init__.py  auth.py  category.py  comment.py  media.py  post.py  post_tag.py  role.py  stat.py  tag.py  user.py  user_role.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  category.py  comment.py  media.py  post.py  post_tag.py  role.py  stat.py  tag.py  user.py  user_role.py
backend/app/schemas/: __init__.py  admin.py  auth.py  category.py  comment.py  media.py  post.py  post_tag.py  profile.py  role.py  search.py  stat.py  tag.py  user.py  user_role.py
backend/app/tests/: admin_test_plan.md  auth_test_plan.md  categories_test_plan.md  comments_test_plan.md  media_test_plan.md  posts_test_plan.md  profile_test_plan.md  roles_test_plan.md  search_test_plan.md  stats_test_plan.md  tags_test_plan.md  users_test_plan.md
backend/app/tests/integration/: test_admin.py  test_auth.py  test_categories.py  test_comments.py  test_media.py  test_posts.py  test_profile.py  test_roles.py  test_search.py  test_stats.py  test_tags.py  test_users.py
backend/app/tests/unit/: test_admin.py  test_auth.py  test_categories.py  test_category_crud.py  test_category_model.py  test_comment_crud.py  test_comments.py  test_main.py  test_media.py  test_media_crud.py  test_posts.py  test_profile.py  test_roles.py  test_search.py  test_stat_crud.py  test_stats.py  test_tag_model.py  test_tags.py  test_user_model.py  test_users.py
backend/app/utils/: init_db.py
backend/database/factories/: CategoryFactory.php  CommentFactory.php  PostFactory.php  TagFactory.php
backend/database/migrations/: 2025_02_09_074129_create_posts_table.php  2025_02_09_074202_create_comments_table.php  2025_02_09_074225_create_post_tags_table.php
backend/database/seeders/: DatabaseSeeder.php  PostSeeder.php
backend/docker/common/php-fpm/: Dockerfile
backend/docker/development/workspace/: Dockerfile
backend/routes/: api.php  web.php
(+66 files in other folders)
