[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.14",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "libpass>=1.9.1.post0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
lint = [
    "ruff>=0.12.5",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
line-length = 88  # Match black default
indent-width = 4
target-version = "py313"  # Set this to your Python version
exclude = ["alembic"]

[tool.ruff.lint]
# Allow autofix of certain rules
fixable = ["ALL"]
select = ['E', 'F', "B", 'W', 'A', 'PLC', 'PLE', 'PLW', "C4", "UP", 'I']
unfixable = []  # Example: don't auto-remove unused imports if unsure

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
